<resources>
    <string name="app_name">NewsApp38m4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Text</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="fragment_news">News</string>
    <string name="fragment_profile">Profile</string>
    <string name="news_title">News Title</string>
    <string name="date_blank">DD.MM.YYYY</string>
    <string name="title">Title</string>
    <string name="btn_start_text">Start</string>
    <string name="skip_board_text">Skip</string>
    <string name="ed_change_hint">Tap to change</string>
    <string name="sorting_text">Sorting:</string>

    <string name="client_id">1045250748711-ioe8nb99kgm7su6gtb34sanao417c1r6.apps.googleusercontent.com</string>
    <string name="login_about_text">Войдите, чтобы иметь полный доступ ко всем актуальным новостям!</string>
    <string name="login_welcome_text">Добро пожаловать!</string>
    <string name="login_via_google_text">Войти через Google</string>
    <string name="account_info_text">Account:</string>
    <string name="accountusername_blank_text">accountUsername</string>
    <string name="logout_button_text">Logout</string>
    <string name="not_found_text">it\'s quite, too quite…</string>
    <string name="reload_btn_text">Reload</string>
</resources>