<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <ImageView
        android:id="@+id/image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_news_globus"
        android:layout_width="180dp"
        android:layout_height="180dp"/>

    <TextView
        android:id="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        android:text="@string/login_welcome_text"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_about"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:text="@string/login_about_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login_google"
        app:layout_constraintTop_toBottomOf="@id/tv_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_via_google_text"
        android:layout_marginTop="18dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</LinearLayout>