<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileFragment.ProfileFragment">

    <LinearLayout
        android:gravity="center"
        android:background="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            app:cardCornerRadius="100dp"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/iv_avatar"
                android:src="@drawable/img_person"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_username"
                android:singleLine="true"
                android:hint="Name/Surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:prefixText="+996"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phone"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_gender"
                android:singleLine="true"
                android:hint="Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_birthday"
                android:singleLine="true"
                android:inputType="date"
                android:hint="Date of Birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/account_info_text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_firebase_avatar"
            android:layout_marginStart="5dp"
            android:src="@drawable/img_person"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/iv_firebase_username"
            android:layout_marginStart="3dp"
            android:text="@string/accountusername_blank_text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_logout"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="26dp"
        android:text="@string/logout_button_text"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>

<!--
<androidx.cardview.widget.CardView
app:cardCornerRadius="5dp"
android:layout_margin="50dp"
android:layout_width="match_parent"
app:cardUseCompatPadding="true"
android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        app:cardCornerRadius="100dp"
        android:layout_marginTop="25dp"
        android:layout_width="120dp"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:src="@drawable/img_person"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Name: "
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_name"
                android:backgroundTint="@android:color/transparent"
                android:singleLine="true"
                android:hint="@string/ed_change_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Surname: "
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_surname"
                android:backgroundTint="@android:color/transparent"
                android:singleLine="true"
                android:hint="@string/ed_change_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="_____________________________"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/account_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/iv_firebase_avatar"
                android:layout_marginStart="5dp"
                android:src="@drawable/img_person"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/iv_firebase_username"
                android:layout_marginStart="3dp"
                android:text="@string/accountusername_blank_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_logout"
            android:layout_marginTop="3dp"
            android:text="@string/logout_button_text"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>-->
